--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "vue": "^2.3.3",
     "vue-awesome-swiper": "^2.5.4",
     "vue-router": "^2.3.1",
-    "vuex": "^2.3.1"
+    "vuex": "^2.3.1",
+    "vue-photo-preview": "^1.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
