--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "swiper": "^3.4.2",
     "vue": "^2.3.3",
     "vue-awesome-swiper": "^2.5.4",
+    "vue-photo-preview": "^1.1.0",
     "vue-router": "^2.3.1",
-    "vuex": "^2.3.1",
-    "vue-photo-preview": "^1.1.0"
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
